; ModuleID = '/home/carl/AnghaBench/php-src/ext/spl/extr_spl_iterators.c_spl_iterator_to_array_apply.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/spl/extr_spl_iterators.c_spl_iterator_to_array_apply.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { %struct.TYPE_6__* }
%struct.TYPE_6__ = type { i32 (%struct.TYPE_7__*, i32*)*, i32* (%struct.TYPE_7__*)* }

@exception = common dso_local global i32 0, align 4
@ZEND_HASH_APPLY_STOP = common dso_local global i32 0, align 4
@ZEND_HASH_APPLY_KEEP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_7__*, i8*)* @spl_iterator_to_array_apply to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @spl_iterator_to_array_apply(%struct.TYPE_7__* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_7__*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %4, align 8
  store i8* %1, i8** %5, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = bitcast i8* %9 to i32*
  store i32* %10, i32** %7, align 8
  %11 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %12 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %11, i32 0, i32 0
  %13 = load %struct.TYPE_6__*, %struct.TYPE_6__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %13, i32 0, i32 1
  %15 = load i32* (%struct.TYPE_7__*)*, i32* (%struct.TYPE_7__*)** %14, align 8
  %16 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %17 = call i32* %15(%struct.TYPE_7__* %16)
  store i32* %17, i32** %6, align 8
  %18 = load i32, i32* @exception, align 4
  %19 = call i64 @EG(i32 %18)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %23

21:                                               ; preds = %2
  %22 = load i32, i32* @ZEND_HASH_APPLY_STOP, align 4
  store i32 %22, i32* %3, align 4
  br label %62

23:                                               ; preds = %2
  %24 = load i32*, i32** %6, align 8
  %25 = icmp eq i32* %24, null
  br i1 %25, label %26, label %28

26:                                               ; preds = %23
  %27 = load i32, i32* @ZEND_HASH_APPLY_STOP, align 4
  store i32 %27, i32* %3, align 4
  br label %62

28:                                               ; preds = %23
  %29 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %30 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %29, i32 0, i32 0
  %31 = load %struct.TYPE_6__*, %struct.TYPE_6__** %30, align 8
  %32 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %31, i32 0, i32 0
  %33 = load i32 (%struct.TYPE_7__*, i32*)*, i32 (%struct.TYPE_7__*, i32*)** %32, align 8
  %34 = icmp ne i32 (%struct.TYPE_7__*, i32*)* %33, null
  br i1 %34, label %35, label %54

35:                                               ; preds = %28
  %36 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %37 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %36, i32 0, i32 0
  %38 = load %struct.TYPE_6__*, %struct.TYPE_6__** %37, align 8
  %39 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %38, i32 0, i32 0
  %40 = load i32 (%struct.TYPE_7__*, i32*)*, i32 (%struct.TYPE_7__*, i32*)** %39, align 8
  %41 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %42 = call i32 %40(%struct.TYPE_7__* %41, i32* %8)
  %43 = load i32, i32* @exception, align 4
  %44 = call i64 @EG(i32 %43)
  %45 = icmp ne i64 %44, 0
  br i1 %45, label %46, label %48

46:                                               ; preds = %35
  %47 = load i32, i32* @ZEND_HASH_APPLY_STOP, align 4
  store i32 %47, i32* %3, align 4
  br label %62

48:                                               ; preds = %35
  %49 = load i32*, i32** %7, align 8
  %50 = call i32 @Z_ARRVAL_P(i32* %49)
  %51 = load i32*, i32** %6, align 8
  %52 = call i32 @array_set_zval_key(i32 %50, i32* %8, i32* %51)
  %53 = call i32 @zval_ptr_dtor(i32* %8)
  br label %60

54:                                               ; preds = %28
  %55 = load i32*, i32** %6, align 8
  %56 = call i32 @Z_TRY_ADDREF_P(i32* %55)
  %57 = load i32*, i32** %7, align 8
  %58 = load i32*, i32** %6, align 8
  %59 = call i32 @add_next_index_zval(i32* %57, i32* %58)
  br label %60

60:                                               ; preds = %54, %48
  %61 = load i32, i32* @ZEND_HASH_APPLY_KEEP, align 4
  store i32 %61, i32* %3, align 4
  br label %62

62:                                               ; preds = %60, %46, %26, %21
  %63 = load i32, i32* %3, align 4
  ret i32 %63
}

declare dso_local i64 @EG(i32) #1

declare dso_local i32 @array_set_zval_key(i32, i32*, i32*) #1

declare dso_local i32 @Z_ARRVAL_P(i32*) #1

declare dso_local i32 @zval_ptr_dtor(i32*) #1

declare dso_local i32 @Z_TRY_ADDREF_P(i32*) #1

declare dso_local i32 @add_next_index_zval(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
